# gender_guesser

./: Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs  load_names.rs
src/gender_guesser/: guesser.rs  mod.rs
